Regras/*RegrasSintaticas*
<programa> ➡︎ int main() <bloco>
<bloco> ➡︎ { <decl_var>* <comando>* }
<comando> ➡︎ <comando_básico> | <iteração> | if ( <expr_relacional> ) <comando> else <comando>?
<comando_básico> ➡︎ <atribuição>| <bloco>
<iteração> ::= while ( <expr_relacional> ) <comando>
<atribuição> ::= <id> = <expr_arit> ;
<expr_relacional> ::= <expr_arit> <op_relacional> <expr_arit>
<expr_arit> ::= <termo> <EA>
<EA> ::= + <termo> <EA> | - <termo> <EA> | Ø
<termo> ::= <fator> <TL> 
<TL> ::= * <fator> | / <fator> | Ø
<fator> ::= ( <expr_arit> )| <id>| <float>| <inteiro>| <char>

Declaracões:
<decl_var> ::= <tipo> <id> ";"
<tipo> ::= int | float | char
